# 20160721_initial_clion_project

./: .gitignore  CMakeLists.txt  Rect.cpp  Rect.h  main.cpp
src/: 201607221_initial_clion_project_Config.h.in  CMakeLists.txt  Rect.cpp  Rect.hpp  Shape.hpp  main.cpp
src/main/: CMakeLists.txt  Rect.cpp  Rect.hpp  Shape.hpp  main.cpp
src/test/: CMakeLists.txt
src/test/basic_tests/: CMakeLists.txt  basic_check.cpp
